--- a/Designer/Interface/Project/ProjectListItemTemplates.xaml
+++ b/Designer/Interface/Project/ProjectListItemTemplates.xaml
@@ -39,10 +39,11 @@
 		<Setter Property="UseLayoutRounding" Value="True" />
 		<Setter Property="Command" Value="{x:Static local:Screen.ChangeActivePageCommand}" />
 		<Setter Property="CommandParameter" Value="{Binding}" />
+		<Setter Property="Padding" Value="5,0,0,0" />
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type Button}">
-					<Border x:Name="PART_Border" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" CornerRadius="5" Padding="5,0,0,0">
+					<Border x:Name="PART_Border" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="0" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" CornerRadius="5" Padding="{TemplateBinding Padding}">
 						<ContentPresenter Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" UseLayoutRounding="{TemplateBinding UseLayoutRounding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
 					</Border>
 					<ControlTemplate.Triggers>
