--- a/Designer/Interface/Dialogs/NewItem.xaml
+++ b/Designer/Interface/Dialogs/NewItem.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
-	xmlns:Root="clr-namespace:WCFArchitect.Interface.Project"
+	xmlns:Root="clr-namespace:WCFArchitect.Interface"
 	xmlns:Projects="clr-namespace:WCFArchitect.Projects;assembly=WCFArchitect.Projects"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
