--- a/Designer/Interface/Project/Project.xaml
+++ b/Designer/Interface/Project/Project.xaml
@@ -109,13 +109,29 @@
 									<ColumnDefinition Width="20" />
 								</Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
-									<RowDefinition Height="20" />
+									<RowDefinition Height="22" />
+									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 								<TextBlock Text="{Binding Path=Namespace}" Grid.Column="0" Margin="3,0,0,0" VerticalAlignment="Center" Foreground="Black" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis"/>
-								<CheckBox Grid.Column="1" Margin="0" Content="Full Framework Only" VerticalAlignment="Center" IsChecked="{Binding Path=IsFullFrameworkOnly}" />
 								<Button Name="DeleteSelectedUsingItem" Grid.Column="2" Margin="0" Click="DeleteSelectedUsingItem_Click" Padding="0" Visibility="Hidden" Background="Transparent">
 									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 								</Button>
+								<Border x:Name="UsingDetails" Grid.Row="1" Visibility="Collapsed">
+									<Grid>
+										<Grid.ColumnDefinitions>
+											<ColumnDefinition Width="*" />
+											<ColumnDefinition Width="*" />
+											<ColumnDefinition Width="*" />
+										</Grid.ColumnDefinitions>
+										<Grid.RowDefinitions>
+											<RowDefinition Height="Auto" />
+											<RowDefinition Height="Auto" />
+										</Grid.RowDefinitions>
+										<CheckBox Grid.Column="0" Margin="0" Content="Server" VerticalAlignment="Center" IsChecked="{Binding Path=Server}" />
+										<CheckBox Grid.Column="1" Margin="0" Content="Client" VerticalAlignment="Center" IsChecked="{Binding Path=Client}" />
+										<CheckBox Grid.Column="2" Margin="0" Content="Requires Full Framework" VerticalAlignment="Center" IsChecked="{Binding Path=IsFullFrameworkOnly}" />
+									</Grid>
+								</Border>
 							</Grid>
 						</Border>
 						<DataTemplate.Triggers>
