--- a/Designer/Interface/Project/GenerationTarget.xaml
+++ b/Designer/Interface/Project/GenerationTarget.xaml
@@ -15,53 +15,42 @@
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Grid.Resources>
-	<Border BorderThickness="0,0,0,1" BorderBrush="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
-		<Grid>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="30" />
-				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="30" />
-			</Grid.ColumnDefinitions>
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="30" />
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="30" />
+		</Grid.ColumnDefinitions>
 
-			<Button Name="Enable" Grid.Column="0" Margin="0,1,1,1" Click="Enable_Click" Padding="0" Style="{StaticResource ListItemButtonStyle}">
-				<Image Name="EnableImage" Source="pack://application:,,,/WCFArchitect;component/Icons/X16/NotAvailable.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-			</Button>
+		<Button Name="Enable" Grid.Column="0" Margin="0,1,1,1" Click="Enable_Click" Padding="0" >
+			<Image Name="EnableImage" Source="pack://application:,,,/WCFArchitect;component/Icons/X16/NotAvailable.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+		</Button>
 			
-			<Grid Grid.Column="1" Name="OptionsGrid">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto" />
-					<RowDefinition Height="Auto" />
-				</Grid.RowDefinitions>
-				<Label Content="Output Path:" Height="Auto" HorizontalAlignment="Left" Margin="5,6,0,0" VerticalAlignment="Top" Grid.RowSpan="2" />
-				<pc:TextBox Text="{Binding Path=Path.Path}" Height="23" Margin="110,7,86,0" Name="OutputPathName" VerticalAlignment="Top" ToolTip="{Binding Path=Path.Path}"  />
-				<Button Content="Browse..." Height="23" HorizontalAlignment="Right" Margin="0,7,5,0" Name="OutputBrowse" VerticalAlignment="Top" Width="75" Click="OutputBrowse_Click" />
-				<Grid Grid.Row="1" Margin="0,5">
-					<Grid.RowDefinitions>
-						<RowDefinition Height="*" />
-					</Grid.RowDefinitions>
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="Auto" />
-						<ColumnDefinition Width="*" />
-					</Grid.ColumnDefinitions>
-					<Label Content="Framework:" Height="28" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" />
-					<ComboBox Height="Auto"  Grid.Column="1" Margin="5,0" SelectedIndex="{Binding Path=Path.Framework, Converter={StaticResource ProjectOutputPathFrameworkConverter}}" VerticalAlignment="Center" ToolTip="{Binding Path=Path.Framework, Converter={StaticResource ProjectOutputPathFrameworkNameConverter}}" >
-						<ComboBoxItem Content="Windows 8 Runtime" />
-						<!-- Uncomment for Silverlight Support
-						<ComboBoxItem Content="Silverlight 5.0" />
-						<ComboBoxItem Content="Silverlight 4.0" /> -->
-						<ComboBoxItem Content=".NET Framework 4.5" />
-						<ComboBoxItem Content=".NET Framework 4.0" />
-						<ComboBoxItem Content=".NET Framework 4.0 Client Profile" />
-						<ComboBoxItem Content=".NET Framework 3.5" />
-						<ComboBoxItem Content=".NET Framework 3.5 Client Profile" />
-						<ComboBoxItem Content=".NET Framework 3.0" />
-					</ComboBox>
-				</Grid>
-			</Grid>
-	
-			<Button Name="Delete" Grid.Column="2" Margin="0,1,1,1" Click="Delete_Click" Padding="0" Style="{StaticResource ListItemButtonStyle}">
-				<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-			</Button>
+		<Grid Grid.Column="1" Name="OptionsGrid">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+			</Grid.RowDefinitions>
+			<Label Content="Output Path:" Height="Auto" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Grid.RowSpan="2" />
+			<pc:TextBox Text="{Binding Path=Path.Path}" Height="23" Margin="95,6,86,0" Name="OutputPathName" VerticalAlignment="Top" ToolTip="{Binding Path=Path.Path}"  />
+			<Button Content="Browse..." Height="23" HorizontalAlignment="Right" Margin="0,6,5,0" Name="OutputBrowse" VerticalAlignment="Top" Width="75" Click="OutputBrowse_Click" />
+			<Label Content="Framework:" Height="28" HorizontalAlignment="Left" Margin="5,3,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" />
+			<ComboBox Height="Auto" Grid.Row="1" Margin="95,5,5,5" SelectedIndex="{Binding Path=Path.Framework, Converter={StaticResource ProjectOutputPathFrameworkConverter}}" VerticalAlignment="Center" ToolTip="{Binding Path=Path.Framework, Converter={StaticResource ProjectOutputPathFrameworkNameConverter}}" >
+				<ComboBoxItem Content="Windows 8 Runtime" />
+				<!-- Uncomment for Silverlight Support
+				<ComboBoxItem Content="Silverlight 5.0" />
+				<ComboBoxItem Content="Silverlight 4.0" /> -->
+				<ComboBoxItem Content=".NET Framework 4.5" />
+				<ComboBoxItem Content=".NET Framework 4.0" />
+				<ComboBoxItem Content=".NET Framework 4.0 Client Profile" />
+				<ComboBoxItem Content=".NET Framework 3.5" />
+				<ComboBoxItem Content=".NET Framework 3.5 Client Profile" />
+				<ComboBoxItem Content=".NET Framework 3.0" />
+			</ComboBox>
 		</Grid>
-	</Border>
+	
+		<Button Name="Delete" Grid.Column="2" Margin="0,1,1,1" Click="Delete_Click" Padding="0" >
+			<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+		</Button>
+	</Grid>
 </Grid>
